test/scc/expr/semantic-errors/109.t
void foo(int a)
{
    
}

void test()
{
	struct { int x; } a;
    foo(a);
}